--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -8,7 +8,7 @@ node {
 
     tag = readFile('commit-id').replace("\n", "").replace("\r", "")
     appName = "hello-kenzan"
-    registryHost = "127.0.0.1:30912/"
+    registryHost = "registry.192.168.49.2.nip.io/"
     imageName = "${registryHost}${appName}:${tag}"
     env.BUILDIMG=imageName
 
