--- a/manifests/jenkins.yaml
+++ b/manifests/jenkins.yaml
@@ -114,7 +114,7 @@ spec:
           mountPath: "/kubectl-config-context.sh"
           subPath: "kubectl-config-context.sh"
       containers:
-      - image: 127.0.0.1:30400/jenkins:latest
+      - image: registry.$(minikube ip).nip.io/jenkins:latest
         name: jenkins
         securityContext:
           privileged: true
