--- a/manifests/jenkins.yaml
+++ b/manifests/jenkins.yaml
@@ -117,7 +117,7 @@ spec:
           mountPath: "/kubectl-config-context.sh"
           subPath: "kubectl-config-context.sh"
       containers:
-      - image: 127.0.0.1:30400/jenkins:latest
+      - image: registry.192.168.49.2.nip.io/jenkins:latest
         name: jenkins
         securityContext:
           privileged: true
